Dear 130 2 workkind insights (#21)
* DEAR-130-2 wip

* DEAR-130 add average by timerange

* DEAR-130 clean up

* DEAR-130 group dtos

* DEAR-130 add workkind insights, testdata

* DEAR-130 more

* DEAR-130 more

* DEAR-130 add basic tests

* DEAR-130 add tests, and adjusted code to validate against null values

* DEAR-130 add emotion insights

* DEAR-130 add emotion insights data

* DEAR-130 fix

* DEAR-130 wip

* DEAR-130 add tests

* DEAR-130 update test data

* DEAR-130 fix docker file

* DEAR-130 fix docker file